Stubbed kcm CLI, minor build updates.

--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,14 @@ application-import-names=intel
 [testenv]
 deps =
   pytest
+  -rrequirements.txt
 
 [testenv:lint]
 deps =
   flake8
   pep8-naming
 commands =
-  flake8 intel tests setup.py
+  flake8 cmd intel tests setup.py
 
 [testenv:unit]
 commands =
