Basic config reading lib and tests.

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
   flake8
   pep8-naming
 commands =
-  flake8 cmd intel tests setup.py
+  flake8 intel kcm.py tests setup.py
 
 [testenv:unit]
 commands =
