--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -7,6 +7,7 @@ Vagrant.configure(2) do |config|
   config.ssh.keys_only = false
   config.ssh.insert_key = false
   config.vm.box_check_update = false
+  config.vbguest.auto_update = false
 
   # Network configuration
   config.vm.network "private_network", ip: "10.141.141.10"
