--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,9 +13,7 @@ Vagrant.configure(2) do |config|
   # Network configuration
   config.vm.network "private_network", ip: "10.141.141.10"
 
-  config.vm.box = "coreos-stable"
-  config.vm.box_url = "https://storage.googleapis.com/stable.release.core-os.net/amd64-usr/current/coreos_production_vagrant.json"
-
+  config.vm.box = "centos/7"
   config.vm.provider "virtualbox" do |vb, override|
     vb.gui = false
     vb.name = "kcm"
@@ -56,4 +54,5 @@ Vagrant.configure(2) do |config|
     override.ssh.username = data['ssh_username'] || "centos"
   end
 config.vm.provision "shell", path: "scripts/install_os_packages.sh"
+config.vm.provision "shell", path: "scripts/install_python_deps.sh"
 end
