--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,12 @@ commands =
 
 [testenv:unit]
 commands =
-  py.test -v tests/unit
+  py.test -v --cov --cov-report=annotate --cov-append tests/unit
 
 [testenv:integration]
 commands =
-  py.test -v -x tests/integration
+  py.test -v --cov --cov-report=annotate --cov-append -x tests/integration
+
+[testenv:coverage]
+commands =
+  coverage report --omit='./.tox/*','./tests/*'
