Snapshot of E2E work

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint, unit, integration
+envlist = lint, unit, integration, e2e
 
 [flake8]
 import-order-style=smarkets
@@ -24,3 +24,8 @@ commands =
 [testenv:integration]
 commands =
   py.test -v -x tests/integration
+
+[testenv:e2e]
+passenv = KCM_E2E_APISERVER
+commands =
+  py.test -v -x tests/e2e
