--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,14 @@
 terraform/workdir/.kargo/
 terraform/workdir/cluster.yml
 terraform/workdir/mvp_inventory/ansible_inventory
-terraform/workdir/mvp_inventory/group_vars/all.yml.old
 terraform/workdir/kubectl
+terraform/workdir/config.yml
+terraform/workdir/credentials/
+terraform/workdir/mvp_inventory/group_vars/all.yml.old
 **/.terraform
 **/ssh_keys
 terraform/vagrant_env/inventory
 **/terraform.tfstate*
 **/terraform_hosts
-*.retry
+**/cluster.retry
+**/post_deploy.retry
