Uninstall command is now integrated with k8s e2e driver

--- a/tox.ini
+++ b/tox.ini
@@ -101,3 +101,7 @@ commands =
 [testenv:coverage]
 commands =
   coverage report --show-missing --omit='./.tox/*','./tests/*'
+
+[testenv:e2e]
+commands =
+  py.test -v tests/e2e
