--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps =
   flake8
   pep8-naming
 commands =
-  flake8 intel kcm.py tests setup.py
+  flake8 intel cmk.py tests setup.py
 
 [testenv:unit]
 commands =
