--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ terraform/workdir/mvp_inventory/group_vars/all.yml.old
 terraform/vagrant_env/inventory
 **/terraform.tfstate*
 **/terraform_hosts
-kcm.spec
+cmk.spec
 **/cluster.retry
 **/post_deploy.retry
 .coverage
