--- a/.release/Vagrantfile
+++ b/.release/Vagrantfile
@@ -37,7 +37,7 @@ echo "github.com,192.30.253.113 ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEAq2A7hRGmdnm9
 apt update
 apt install python3-pip -y
 pip3 install --upgrade pip3
-pip3 install -r /kcm/requirements.txt
+pip3 install -r /cmk/requirements.txt
 pip3 install grip
 update-alternatives --install /usr/bin/python python /usr/bin/python3 10
 update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 10
@@ -48,7 +48,7 @@ SCRIPT
   config.vm.provider "virtualbox" do |vb, override|
     vb.gui = false
 
-    override.vm.synced_folder "..", "/kcm"
+    override.vm.synced_folder "..", "/cmk"
 
     override.ssh.insert_key = true
     override.ssh.keys_only = true
@@ -56,7 +56,7 @@ SCRIPT
 
   config.vm.provider :aws do |aws, override|
 
-    override.vm.synced_folder "..", "/kcm", type: "rsync", rsync__args: ["--verbose", "--archive", "--delete", "-z", "--links"]
+    override.vm.synced_folder "..", "/cmk", type: "rsync", rsync__args: ["--verbose", "--archive", "--delete", "-z", "--links"]
 
     require 'yaml'
     # load a file at this location that can be used to set aws specific
