--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ commands =
 
 [testenv:integration]
 commands =
-  py.test -v --cov --cov-report=annotate --cov-append -x tests/integration
+  py.test -v --cov --cov-report=annotate --cov-append tests/integration
 
 [testenv:coverage]
 commands =
