--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ tox>=2.5, <3.0
 docopt>=0.6, <1.0
 psutil>=5.0, <5.5
 pyinstaller>=3.2, <4.0
-kubernetes==1.0.0a4 
+kubernetes==3.0.0
 requests>=2.12, <3.0
 pytest-catchlog>=1.2, <1.4
 pytest-cov>=2.4.0
