Add compatibility with Kubernetes 1.8

--- a/resources/authorization/cmk-rbac-rules.yaml
+++ b/resources/authorization/cmk-rbac-rules.yaml
@@ -32,7 +32,7 @@ rules:
   verbs: ["*"]
 ---
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1alpha1
+apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: cmk-version-controller
 rules:
