--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ psutil>=5.0, <5.5
 pyinstaller>=3.2, <4.0
 kubernetes==3.0.0
 requests>=2.12, <3.0
-pytest-catchlog>=1.2, <1.4
+pytest<=3.3.2
 pytest-cov>=2.4.0
