--- a/resources/authorization/cmk-serviceaccount.yaml
+++ b/resources/authorization/cmk-serviceaccount.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: cmk-serviceaccount
-  namespace: cmk        
+  #namespace: user-supplied-namespace
