Load mutations dynamically in webhook server
* Read mutations which needs to applied from configuration file
* Mutations config file location is specified in the server configuration file
* Apply mutations per pod or per container by merging
* Update automated deployment
* Refactor webhook code

Signed-off-by: Przemyslaw Lal <przemyslawx.lal@intel.com>

--- a/resources/webhook/cmk-webhook-pod.yaml
+++ b/resources/webhook/cmk-webhook-pod.yaml
@@ -24,16 +24,16 @@ spec:
   - operator: "Exists"
   containers:
   - args:
-    - "/cmk/cmk.py webhook --conf-file /etc/config/webhook.yaml --host-proc '/proc' --conf-dir '/etc/cmk' --install-dir '/opt/bin' --saname cmk-serviceaccount"
+    - "/cmk/cmk.py webhook --conf-file /etc/webhook/server.yaml"
     command:
     - "/bin/bash"
     - "-c"
     image: cmk:v1.2.2
     name: cmk-webhook
     volumeMounts:
-    - mountPath: /etc/config
+    - mountPath: /etc/webhook
       name: cmk-webhook-configmap
-    - mountPath: /etc/certs
+    - mountPath: /etc/ssl
       name: cmk-webhook-certs
       readOnly: True
   restartPolicy: Never
