--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ tox>=2.5, <3.0
 docopt>=0.6, <1.0
 psutil>=5.0, <5.5
 pyinstaller>=3.2, <4.0
-kubernetes==3.0.0
+kubernetes==5.0.0
 requests>=2.12, <3.0
 pytest<=3.3.2
 pytest-cov>=2.4.0
+cryptography>=2.3
+yamlreader==3.0.4
 pluggy>=0.5, <0.7
