improve mutating webhook's availability
* move from "pod" to "deployment" with "restartPolicy" set to "Always"
* set "failurePolicy" in webhook configuration to "Ignore" in order to
enable pods creation when webhook server is down

Signed-off-by: Przemyslaw Lal <przemyslawx.lal@intel.com>

--- a/resources/webhook/cmk-webhook-config.yaml
+++ b/resources/webhook/cmk-webhook-config.yaml
@@ -11,7 +11,7 @@ webhooks:
       name: cmk-webhook-service
       namespace: default
       path: /mutate
-  failurePolicy: Fail
+  failurePolicy: Ignore
   name: cmk.intel.com
   rules:
   - apiGroups:
