--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ pyinstaller>=3.2, <4.0
 kubernetes==8.0.0
 requests>=2.12, <3.0
 pytest<=3.3.2
-pytest-cov>=2.4.0
-cryptography>=2.3
+pytest-cov>=2.4.0, <2.6.1
+cryptography>=2.3, <=2.4.2
 yamlreader==3.0.4
 pluggy>=0.5, <0.7
 packaging==17.1
