move tests to separate Makefile target
* remove tests execution from regular image build
* add new Makefile target for tests, to execute run `make test`
* update Travis job configuration to reflect this change

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 jobs:
   include:
     - stage: "Build and test"
-      script: make docker
+      script: make test
     - stage: "Release"
       before_script:
         # Set up git user name and update remote origin
