--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ jobs:
         - git config --local user.email "intel_bot@intel.com"
         - git remote set-url origin https://${GITHUB_TOKEN}@github.com/${TRAVIS_REPO_SLUG}
       script: make release
-      if: branch = master
+      if: branch = master AND type = push AND fork = false
