Update to use namespace for operator (avoid using default) (#251)
* Summary:
- Promote good practices for Kubernetes by creating dedicated namespaces for operators and avoid using "default" namespaces
- Update components to use "intel-cmk" as the namespace and avoid using "default"
- Update Pod template definition to use the cmk-serviceaccount instead of default

Changes:
- cmk-cluster-init-pod.yaml: update to use intel-cmk as the default namespace for deployment
- k8s.py: update get_pod_template to use CMK service account (default to cmk-serviceaccount)
- Update pods and daemonset definitions in ./resources/pods/ to use intel-cmk as default namespace
- cmk-rbac-rules.yaml: update to use intel-cmk for the RBAC
- cmk-serviceaccount.yaml: update to use intel-cmk as namespace for the ServiceAccount

* Summary:
- Promote good practices for Kubernetes by creating dedicated namespaces for operators and avoid using "default" namespaces
- Update components to use "intel-cmk" as the namespace and avoid using "default"
- Update Pod template definition to use the cmk-serviceaccount instead of default

Changes:
- cmk-cluster-init-pod.yaml: update to use intel-cmk as the default namespace for deployment
- k8s.py: update get_pod_template to use CMK service account (default to cmk-serviceaccount)
- Update pods and daemonset definitions in ./resources/pods/ to use intel-cmk as default namespace
- cmk-rbac-rules.yaml: update to use intel-cmk for the RBAC
- cmk-serviceaccount.yaml: update to use intel-cmk as namespace for the ServiceAccount

* Update to fix space after colon character

* Updating to fix spaces at cmk-isolate-pod.yaml

--- a/resources/webhook/cmk-webhook-config.yaml
+++ b/resources/webhook/cmk-webhook-config.yaml
@@ -9,7 +9,7 @@ webhooks:
     caBundle: BASE64_ENCODED_CERT
     service:
       name: cmk-webhook-service
-      namespace: default
+      namespace: cmk-namespace
       path: /mutate
   failurePolicy: Ignore
   name: cmk.intel.com
