--- a/resources/authorization/cmk-rbac-rules.yaml
+++ b/resources/authorization/cmk-rbac-rules.yaml
@@ -58,6 +58,18 @@ rules:
   resources: ["nodes"]
   verbs: ["*"]
 ---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: cmk-exec
+rules:
+- apiGroups: [""]
+  resources:
+    - pods/exec
+  verbs:
+    - create
+    - get
+---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
@@ -144,6 +156,19 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cmk-node-lister
+subjects:
+- kind: ServiceAccount
+  name: cmk-serviceaccount
+  namespace: cmk-namespace
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  name: cmk-role-binding-pod-exec
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cmk-exec
 subjects:
 - kind: ServiceAccount
   name: cmk-serviceaccount
