--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 tox>=2.5, <3.0
 docopt>=0.6, <1.0
-psutil>=5.6.6, <5.7
+psutil==5.6.7
 pyinstaller>=3.2, <4.0
 kubernetes==10.0.0
 requests>=2.21, <3.0
-urllib3==1.24.2
+urllib3==1.25.9
 pytest<=3.3.2
 pytest-cov>=2.4.0, <2.6.1
 coverage<=4.5.4
-cryptography>=2.3, <=2.4.2
+cryptography==2.4.2
 yamlreader==3.0.4
 pluggy>=0.5, <0.7
 packaging==17.1
